#pragma once

#include <iostream>

class Goose {
public:
    void honk() {
        std::cout << "Honk\n";
    }
};
